Fix timeline panel actions spacing
This fixes the issue of the panel responsiveness because the buttons are aligned underneath the dialog bubble in desktop viewport.

--- a/stylesheets/_component.timeline.scss
+++ b/stylesheets/_component.timeline.scss
@@ -682,4 +682,8 @@ $timeline-content-border: #ccc;
 .panel.with-timeline .panel__actions {
     margin-bottom: 10px;
     margin-left: 70px;
+
+    @include respond-max($screen-tablet) {
+        margin-left: 0;
+    }
 }
